# Memory-optimisation

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  llm memory optimisation.txt  models.py  openenv.yaml  pyproject.toml  readme.md  requirements-server.txt  requirements.txt  scenario_config.json
client_notebooks/: evaluate.ipynb
scripts/: run_llm_baseline.py
server/: app.py  main.py
server/db/: scenarios.py
server/graders/: response_grader.py  retrieval_grader.py  storage_grader.py
server/handlers/: memory_handler.py
server/memory/: episodic.py  semantic.py  working.py
server/reward/: reward_function.py
server/routes/: memory.py
server/schemas/: memory.py
server/services/: action_handler.py  environment.py  memory_manager.py  state_builder.py
