[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "memory-env"
version = "1.0.0"
description = "OpenEnv-compatible RL environment for LLM memory management benchmarking"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "stable-baselines3>=2.1.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.main:main"

[project.optional-dependencies]
notebooks = ["jupyter>=1.0.0", "ipykernel>=6.0.0"]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
